Add images and base markup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 
-<body></body>
+<body>
+    <header class="header">
+        //
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="search-stat">
+                <p>About 69,500,000 results (0.38 seconds)</p>
+            </div>
+
+            <div class="search-results">
+
+                <footer class="search-results--footer">
+                    Gooooooogle
+                </footer>
+            </div>
+        </div>
+    </main>
+
+    <footer class="main-footer">
+        <div class="location">
+            //
+        </div>
+        <div class="misc">
+            //
+        </div>
+    </footer>
+</body>
 
 </html>
